<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ActivityAuthentication">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/inscriptionLogin"
        app:layout_constraintBottom_toBottomOf="@+id/editTextActivityAuthenticationLogin"
        app:layout_constraintEnd_toStartOf="@+id/editTextActivityAuthenticationLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextActivityAuthenticationLogin" />

    <EditText
        android:id="@+id/editTextActivityAuthenticationLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="client"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextActivityAuthenticationPassword" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/inscriptionPassword"
        app:layout_constraintBottom_toBottomOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextActivityAuthenticationPassword" />

    <EditText
        android:id="@+id/editTextActivityAuthenticationPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="password"
        app:layout_constraintBottom_toTopOf="@+id/viewActvityAuthenticateAnchor"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxHidePassword"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkBoxHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:button="@drawable/view_checkbox_button_password"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextActivityAuthenticationPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextActivityAuthenticationPassword" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/checkBoxRememberMe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutActivityAuthenticationContainerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewActvityAuthenticateAnchor">

        <TextView
            android:id="@+id/textViewActivityAythenticationNoAccountInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNoAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewActivityAuthenticationRegisterInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/textViewRegister"
            android:textColor="@color/sky_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewActivityAythenticationNoAccountInscription"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewActvityAuthenticateAnchor"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>